--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -87,12 +87,12 @@ jobs:
           # Pastikan Git sudah terinstal (runner Windows biasanya sudah terinstal Git)
           git --version
 
-          $GITHB_TOKEN = ${{ secret.PAT }}
+          $GITHBTOKEN = "${{ secret.PAT }}"
 
           # Menjalankan perintah untuk clone repository
           cd D:\
           git clone https://github.com/matrix120206a/testw.git
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/TheMatrix14C/ZalithLauncher2-custom-build.git
+          git clone https://x-access-token:${{ secrets.GITHUBTOKEN }}@github.com/TheMatrix14C/ZalithLauncher2-custom-build.git
 #          Get-ChildItem D:\testw
 #          Get-ChildItem D:\ZalithLauncher2-custom-build
 
