--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -91,11 +91,10 @@ jobs:
 
           $GITHUBTOKEN = "${{ secrets.PAT }}"
           
-          Write-Host "Length: $($GITHUBTOKEN.Length)"
           # Menjalankan perintah untuk clone repository
           cd D:\
           git clone https://github.com/matrix120206a/testw.git
-          git clone https://x-access-token:$GITHUBTOKEN@github.com/TheMatrix14C/ZalithLauncher2-custom-build.git
+
 
 
 #          Get-ChildItem D:\testw
@@ -163,30 +162,29 @@ jobs:
 #            Write-Host "✅ User Matrix sudah ada."
 #          }
 
-#      - name: Simulate RDP login for user Matrix
-#        shell: pwsh
-#        run: |
-#          Write-Host "👤 Simulating RDP login for user Matrix..."
-#          Write-Host "Creating local session via tscon..."
-#
-#          # Coba cari session aktif milik user Matrix
-#          $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
-#          if (-not $sessionLine) {
-#            Write-Host "⚠️ Tidak ditemukan session Matrix, membuat dummy session..."
-#            cmd /c "runas /user:Matrix cmd.exe /c exit"
-#            Start-Sleep -Seconds 3
-#            $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
-#          }
-#
-#          if (-not $sessionLine) {
-#            Write-Host "❌ Gagal menemukan session Matrix setelah dicoba."
-#            exit 0
-#          }
-#
-#          $sessionId = ($sessionLine -split "\s+")[2]
-#          Write-Host "📟 Session ID Matrix: $sessionId"
-#          tscon $sessionId /dest:console
-#          Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
+      - name: Simulate RDP login for user Matrix
+        shell: pwsh
+        run: |
+          Write-Host "👤 Simulating RDP login for user Matrix..."
+          Write-Host "Creating local session via tscon..."
+
+          # Coba cari session aktif milik user Matrix
+          $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
+          if (-not $sessionLine) {
+            Write-Host "⚠️ Tidak ditemukan session Matrix, membuat dummy session..."
+            cmd /c "runas /user:Matrix cmd.exe /c exit"
+            Start-Sleep -Seconds 3
+            $sessionLine = (qwinsta | Select-String "Matrix") | Out-String
+          }
+          if (-not $sessionLine) {
+            Write-Host "❌ Gagal menemukan session Matrix setelah dicoba."
+            exit 0
+          }
+
+          $sessionId = ($sessionLine -split "\s+")[2]
+          Write-Host "📟 Session ID Matrix: $sessionId"
+          tscon $sessionId /dest:console
+          Write-Host "✅ Session Matrix berhasil dihubungkan ke console."
 
 
 
