--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -64,10 +64,14 @@ jobs:
           gpupdate /force
 
           net user Matrix Matrix#1234 /add
-          net localgroup "Administrators" Matrix /add
+          net localgroup "Users" Matrix /add
+          
+
+
           reg add "HKLM\SOFTWARE\Microsoft\Windows\DWM" /v ForceEffectMode /t REG_DWORD /d 2 /f
           rundll32.exe themecpl.dll,OpenThemeAction "C:\Windows\resources\Themes\dark.theme"
           
+          # net localgroup "Administrators" Matrix /add
           
           # Load Default User hive
           REG LOAD HKLM\Default C:\Users\Default\NTUSER.DAT
