--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -50,8 +50,8 @@ jobs:
           cd D:\
           mkdir ZalithLauncher2-custom-build
 
-          gdown --id $android_sdk_link -O $android-sdk-filename
-          gdown --id $AndroidStudio_link -O $AndroidStudio-filename
+          gdown --id $android_sdk_link -O $android_sdk_filename
+          gdown --id $AndroidStudio_link -O $AndroidStudio_filename
           # Verifikasi unduhan di Windows
           Write-Host "File berhasil diunduh:"
           # Perintah PowerShell untuk menampilkan nama dan ukuran file
