--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -46,12 +46,15 @@ jobs:
           $android_sdk_filename="android-sdk.tar"
           $AndroidStudio_link="1UCcEZCaCB9L9jBPP04KLYF_KD57GpKLZ"
           $AndroidStudio_filename="AndroidStudio.tar"
+          $Wall="1jJYUUNfcpb6fRO03vo0Z2ECClyIzIL6Z"
+          $Wall_filename="windows-11-dark-mode.png"
           
           cd D:\
           mkdir ZalithLauncher2-custom-build
 
           gdown --id $android_sdk_link -O $android_sdk_filename
           gdown --id $AndroidStudio_link -O $AndroidStudio_filename
+          gdoen --id $Wall -O $Wall_filename
        
 
       - name: Disable Password
