--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -52,8 +52,8 @@ jobs:
           mkdir ZalithLauncher2-custom-build
           
           gdown --id $Wall -O $Wall_filename
-          gdown --id $android_sdk_link -O $android_sdk_filename
-          gdown --id $AndroidStudio_link -O $AndroidStudio_filename
+          #gdown --id $android_sdk_link -O $android_sdk_filename
+          #gdown --id $AndroidStudio_link -O $AndroidStudio_filename
        
       - name: Disable Password
         run: |
