--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -41,7 +41,7 @@ jobs:
         # Menggunakan shell default (PowerShell) yang mendukung perintah bash/curl
         run: |
           pip install gdown
-          $android_sdk_link="1UCcEZCaCB9L9jBPP04KLYF_KD57GpKLZ"
+          $android_sdk_link="1XfRhiBVx2CPNCjtRPeERTEPs-4pv-gOY"
           $android_sdk_filename="android-sdk.tar"
           $AndroidStudio_link="1w5b9gQFpVPHihW8Igo-xwAuB1UU40ShH"
           $AndroidStudio_filename="AndroidStudio.tar"
@@ -52,8 +52,8 @@ jobs:
           mkdir ZalithLauncher2-custom-build
           
           gdown --id $Wall -O $Wall_filename
-          #gdown --id $android_sdk_link -O $android_sdk_filename
-          #gdown --id $AndroidStudio_link -O $AndroidStudio_filename
+          gdown --id $android_sdk_link -O $android_sdk_filename
+          gdown --id $AndroidStudio_link -O $AndroidStudio_filename
        
       - name: Disable Password
         run: |
