--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -51,9 +51,9 @@ jobs:
           cd D:\
           mkdir ZalithLauncher2-custom-build
           
-          #gdown --id $Wall -O $Wall_filename
-          #gdown --id $android_sdk_link -O $android_sdk_filename
-          #gdown --id $AndroidStudio_link -O $AndroidStudio_filename
+          gdown --id $Wall -O $Wall_filename
+          gdown --id $android_sdk_link -O $android_sdk_filename
+          gdown --id $AndroidStudio_link -O $AndroidStudio_filename
        
       - name: Disable Password
         run: |
